--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="gallery-row"> 
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="images/g1.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
+									<a href="images/g1.jpg" data-lightbox="example-set">
 										<img src="images/g1.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
 											<h5>View+</h5> 
@@ -254,7 +254,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="images/g2.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
+									<a href="images/g2.jpg" data-lightbox="example-set">
 										<img src="images/g2.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
 											<h5>View+</h5> 
@@ -264,7 +264,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="images/g3.jpg" data-lightbox="example-set" data-title="Eaque ipsa quae ab illo inventore veritatis et quasi">
+									<a href="images/g3.jpg" data-lightbox="example-set">
 										<img src="images/g3.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
 											<h5>View+</h5> 
@@ -274,7 +274,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="images/g4.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
+									<a href="images/g4.jpg" data-lightbox="example-set">
 										<img src="images/g4.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
 											<h5>View+</h5> 
@@ -284,7 +284,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="images/g5.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
+									<a href="images/g5.jpg" data-lightbox="example-set">
 										<img src="images/g5.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
 											<h5>View+</h5> 
@@ -294,7 +294,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="images/g6.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
+									<a href="images/g6.jpg" data-lightbox="example-set">
 										<img src="images/g6.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
 											<h5>View+</h5> 
@@ -304,7 +304,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="images/g3.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
+									<a href="images/g3.jpg" data-lightbox="example-set">
 										<img src="images/g3.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
 											<h5>View+</h5> 
@@ -314,7 +314,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="images/g1.jpg" data-lightbox="example-set" data-title="Eaque ipsa quae ab illo inventore veritatis et quasi">
+									<a href="images/g1.jpg" data-lightbox="example-set">
 										<img src="images/g1.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
 											<h5>View+</h5> 
@@ -324,7 +324,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="images/g2.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
+									<a href="images/g2.jpg" data-lightbox="example-set">
 										<img src="images/g2.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
 											<h5>View+</h5> 
