--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li><a href="#" data-toggle="modal" data-target="#education" class="w3ls-hover"><span data-letters="Education">Education </span></a></li>
 						<li><a href="#" data-toggle="modal" data-target="#work" class="w3ls-hover"><span data-letters="Work">Work</span></a></li>
 						<li><a href="#" data-toggle="modal" data-target="#contact" class="w3ls-hover"><span data-letters="Contact">Contact </span></a></li> 
-						<li><a class="w3ls-icon" href="#"><span class="glyphicon glyphicon-save"></span></a></li> 
 					</ul>
 					<div class="clearfix"> </div>
 				</div>
@@ -75,7 +74,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="modal-body modal-spa">
 					<div class="about"> 
 						<div class="col-md-4 about-left ">
-							<img src="images/img1.jpg" class="img-responsive" alt=""/>
+							<img src="images/img1.PNG" class="img-responsive" alt=""/>
 						</div>
 						<div class="col-md-8 about-right wthree">
 							<h3>Hi, I'm <span>Evan C. Kacsits </span></h3>
